--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "knex": "^3.1.0",
     "knex-paginate": "^3.2.0",
     "pg": "^8.16.3",
+    "serverless-http": "^4.0.0",
     "sqlite3": "^5.1.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
