feat: dont ignore dist

--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "ts.check": "tsc --project tsconfig.json",
     "add-build": "git add dist"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
