--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
   "scripts": {
     "lint": "npx eslint ./src/**",
     "lint:fix": "npx eslint ./src/** --fix",
-    "start": "tsx watch src/index.ts",
     "migrate": "knex migrate:latest",
     "migrate:make": "knex migrate:make",
     "migrate:rollback": "knex migrate:rollback",
     "seed": "knex seed:run",
     "seed:make": "knex seed:make",
-    "build": "tsc",
     "ts.check": "tsc --project tsconfig.json",
     "add-build": "git add dist",
-    "vercel-build": "echo hello"
+    "vercel-build": "echo hello",
+    "build": "rimraf ./dist && tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
+    "start": "node dist/src/server.js",
+    "dev": "tsx watch src/server.ts"
   },
   "_moduleAliases": {
     "@": "dist/src"
@@ -43,6 +44,7 @@
     "prettier": "^3.6.2",
     "rimraf": "^6.1.2",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.44.1"
