--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/module-alias": "^2.0.4",
     "@types/node": "^24.5.2",
     "@types/pg": "^8.15.6",
     "@types/sqlite3": "^3.1.11",
@@ -40,7 +41,6 @@
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.4.0",
     "jiti": "^2.6.0",
-    "pre-commit": "^1.2.2",
     "prettier": "^3.6.2",
     "rimraf": "^6.1.2",
     "ts-node": "^10.9.2",
